# skill-studio

./: Cargo.toml  LICENSE  README.md  RELEASING.md  design.md  package-lock.json  package.json
.github/workflows/: ci.yml  provision-smoke.yml  release.yml
client/desktop/: Cargo.toml  tauri.conf.json
client/desktop/src/: lib.rs
client/web/: globals.css  main.tsx
client/web/app/: AppShell.tsx  routeGuard.ts  router.tsx
client/web/components/: FileIcon.tsx  FolderPicker.tsx  LiveEditor.tsx  Modal.tsx  NavBar.tsx  RemoteMenu.tsx  SplitStack.tsx  TerminalsWorkspace.tsx  UpdateBanner.tsx  confirm.tsx  ui.tsx  useConfirm.ts
client/web/lib/: agents.ts  api.ts  editorState.ts  githubSync.ts  recents.ts  remote.ts  routes.ts  skill.ts  updates.ts
crates/skill-core/src/: discover.rs  gitops.rs  lib.rs  secrets.rs  sync.rs
crates/skill-server/src/: main.rs
scripts/: sign-windows.ps1  stamp-version.sh
server/skill-core/src/: agents.rs  commit_agent.rs  commitmsg.rs  discover.rs  engine.rs  github.rs  gitops.rs  lib.rs  mining.rs  paths.rs  recents.rs  remotesync.rs  secrets.rs  skill.rs  sync.rs  update.rs
server/skill-server/src/: lib.rs  remote_api.rs
server/skill-term/src/: lib.rs
skills/skill-studio/: SKILL.md  activate.sh
src/: globals.css
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs
src/app/: router.tsx
src/components/: FileIcon.tsx  Home.tsx  ImportSkillDialog.tsx  ManagePanel.tsx  NavBar.tsx  SecretsManager.tsx  SkillApp.tsx  SkillDocument.tsx  TopBar.tsx
src/lib/: agents.ts  api.ts  diffGeometry.ts  routes.ts
(+45 files in other folders)
