# Server Cargo workspace. The Tauri shell is intentionally excluded so standalone
# skill-server releases don't resolve desktop dependencies. See design.md.
[workspace]
members = ["server/skill-core", "server/skill-server", "server/skill-term"]
exclude = ["client/desktop"]
resolver = "2"

# Server version source. scripts/stamp-version.sh keeps this and the desktop package
# version in sync for release tags.
[workspace.package]
version = "0.0.0"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "s"
strip = true
